# desktop

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.2709190.4.8-pre1  CMakeSettings.json  README.md  TrebleShot.pro  build_trebleshot.sh  main.cpp  mainwindow.cpp  mainwindow.h
assets/: resources.qrc  resources.qrc.depends
assets/strings/: Turkish.qm  Turkish.qts  Turkish.ts
cmake/: QtCommon.cmake  windows_metafile.rc.in
qzeroconf/: CMakeLists.txt  bonjour.cpp  bonjour_p.h  qzeroconf.h
qzeroconf/bonjour-sdk/: dnssd_clientstub.c
res/: OngoingTasks.qml  mainwindow.ui  resources.qrc
res/ui/: mainwindow.ui
src/: MainWindow.qml  MainWindowForm.ui.qml  accessdatabase.cpp  accessdatabase.h  build.h.in  communicationserver.cpp  communicationserver.h  coolsocket.cpp  coolsocket.h  ds.cpp  ds.h  main.cpp  mainwindow.cpp  mainwindow.h  stringlistmodel.cpp  stringlistmodel.h  transferobject.cpp  transferobject.h
src/broadcast/: CommunicationServer.cpp  CommunicationServer.h  DNSSDService.cpp  DNSSDService.h  NetworkServiceDiscovery.cpp  NetworkServiceDiscovery.h  SeamlessClient.cpp  SeamlessClient.h  SeamlessServer.cpp  SeamlessServer.h  communicationserver.cpp  communicationserver.h
src/config/: Config.cpp  Config.h  Keyword.h  config.h  keyword.h
src/coolsocket/: CoolSocket.cpp  CoolSocket.h  coolsocket.cpp  coolsocket.h
src/database/: AccessDatabase.cpp  AccessDatabase.h  DatabaseLoader.cpp  DatabaseLoader.h  ReconstructionException.cpp  ReconstructionException.h  accessdatabase.cpp  accessdatabase.h
src/database/object/: NetworkDevice.cpp  NetworkDevice.h  TextStreamObject.cpp  TextStreamObject.h  TransferGroup.cpp  TransferGroup.h  TransferObject.cpp  TransferObject.h  networkdevice.cpp  networkdevice.h  transfergroup.cpp  transfergroup.h  transferobject.cpp  transferobject.h
src/dialog/: WelcomeDialog.cpp  WelcomeDialog.h  WelcomeDialog.ui
src/model/: ConnectionModel.cpp  ConnectionModel.h  FlawedTransferModel.cpp  FlawedTransferModel.h  NetworkDeviceModel.cpp  NetworkDeviceModel.h  StringListModel.cpp  StringListModel.h  TextStreamModel.cpp  TextStreamModel.h  TransferGroupListModel.cpp  TransferGroupListModel.h  TransferGroupModel.cpp  TransferGroupModel.h  TransferObjectModel.cpp  TransferObjectModel.h  stringlistmodel.cpp  stringlistmodel.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ConnectionReselectForDeviceDialog.cpp  ConnectionReselectForDeviceDialog.h  ConnectionReselectForDeviceDialog.ui  DeviceChooserDialog.cpp  DeviceChooserDialog.h  DeviceChooserDialog.ui  FileAdditionProgressDialog.cpp  FileAdditionProgressDialog.h  FileAdditionProgressDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ManageDevicesDialog.cpp  ManageDevicesDialog.h  ManageDevicesDialog.ui  ManageDevicesWidget.cpp  ManageDevicesWidget.h  ManageDevicesWidget.ui  ShowTransferDialog.cpp  ShowTransferDialog.h  ShowTransferDialog.ui  ShowTransferWidget.cpp  ShowTransferWidget.h  ShowTransferWidget.ui  TransferRequestProgressDialog.cpp  TransferRequestProgressDialog.h  TransferRequestProgressDialog.ui  TransferWindow.cpp  TransferWindow.h  TransferWindow.ui  mainwindow.cpp  mainwindow.h
src/util/: AppUtils.cpp  AppUtils.h  CommunicationBridge.cpp  CommunicationBridge.h  GThread.cpp  GThread.h  Interrupter.cpp  Interrupter.h  NetworkDeviceLoader.cpp  NetworkDeviceLoader.h  SynchronizedList.cpp  SynchronizedList.h  TransferUtils.cpp  TransferUtils.h  ViewUtils.cpp  ViewUtils.h  communicationbridge.cpp  communicationbridge.h  networkdeviceloader.cpp  networkdeviceloader.h
